# Clix

./: .gitmodules  CMakeLists.txt  README.md  comment.clix  if.clix  inverse.clix  shifted.clix
examples/: example.clix  external.clix  if-unimplemented.clix  loops.clix  string.clix
include/: actions.h  error.h  executor.h  ffi.h  global.h  lexer.h  tokenizer.h
src/: actionlist.c  error.c  executor.c  ffi.c  lexer.c  main.c  tokenizer.c
